@@ -532,6 +532,7 @@ be today + 10 days</li>
 new animal record:</p>
 <ul class="simple">
 <li>The animal’s adoption fee amount and description/bio field</li>
+<li>The animal’s current vet</li>
 <li>The Hold, Is Not Available For Adoption and Do Not Register Microchip flags</li>
 <li>Any additional flags the shelter has added to the system</li>
 <li>Any additional fields the shelter has added to the system</li>
